--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -2,7 +2,7 @@
 overflow: hidden;
  }
 
- .header__img {
+ .header__img-index2 {
  background-position: 50% 50%;
  background-size: cover;
  background-repeat: no-repeat;
