--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -322,7 +322,7 @@ filter: brightness(0.8);
 
 .content__view-next-holiday{
 margin:50px 0;
-background-image: url('/asset/img/content-7.jpg');
+background: url('/asset/img/content-7.jpg');
 height: 240px;
 background-position: center;
 background-repeat: no-repeat;
@@ -651,7 +651,7 @@ position: absolute;
 content: "";
 display: block;
 background-repeat: no-repeat;
-background-image: url('/asset/img/quymonquan-content.png');
+background: url('/asset/img/quymonquan-content.png');
 background-size: 3rem;
 width: 60px;
 height:60px;
@@ -664,7 +664,7 @@ position: absolute;
 content: "";
 display: block;
 background-repeat: no-repeat;
-background-image: url('/asset/img/hongkong-content.png');
+background: url('/asset/img/hongkong-content.png');
 background-size: 3rem;
 width: 60px;
 height:60px;
@@ -677,7 +677,7 @@ position: absolute;
 content: "";
 display: block;
 background-repeat: no-repeat;
-background-image: url('/asset/img/fansico-content.png');
+background: url('/asset/img/fansico-content.png');
 background-size: 3rem;
 width: 60px;
 height:60px;
