--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -651,7 +651,7 @@ position: absolute;
 content: "";
 display: block;
 background-repeat: no-repeat;
-background: url('/asset/img/quymonquan-content.png') top center / cover no-repeat;
+background: url('http://www.nicdarkthemes.com/themes/travel/wp/demo/love-travel/wp-content/uploads/sites/3/2018/11/arch.png') top center / cover no-repeat;
 background-size: 3rem;
 width: 60px;
 height:60px;
